nats-micro/tests/ui/service_error_after_derive_not_supported.rs
use nats_micro::service_error;
use thiserror::Error;

#[derive(Debug, Error)]
#[service_error]
pub enum DemoError {
    #[error("empty")]
    Empty,
}

fn main() {}
